apps/k8s-io-packages/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-io-packages
  labels:
    app: k8s-io-packages
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: k8s-io-packages
  type: ClusterIP
  ports:
  - name: http
    port: 80
