apps/k8s-io-packages/ingress-canary-v6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-io-packages-v6
  labels:
    app: k8s-io-packages
  namespace: k8s-io-packages-canary
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-io-packages-ingress-canary-v6
spec:
  defaultBackend:
    service:
      name: k8s-io-packages
      port:
        name: http
  tls:
  - secretName: k8s-io-tls
