apps/k8s-io-packages/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-io-packages
  labels:
    app: k8s-io-packages
  namespace: k8s-io-packages-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-io-packages-ingress-prod
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: k8s-io-packages
spec:
  defaultBackend:
    service:
      name: k8s-io-packages
      port:
        name: http
